# blossomer_gtm_app

./: .dockerignore  .env.example  .gitignore  .pre-commit-config.yaml  ARCHITECTURE.md  CLAUDE.md  CRUD_API_TESTING_GUIDE.md  Dockerfile  GEMINI.md  PERSONA_TESTING_GUIDE.md  PRD.md  PROMPT_TEMPLATES.md  README.md  SCHEMA_TESTING_SUMMARY.md  TESTING_AUTO_SAVE.md  docker-compose.yml  firecrawl_integration_design.md  generate_openapi.py  handoff-07-07.md  interactive_schema_demo.py  last-test-run.txt  mypy.ini  openapi.json  pyproject.toml  pytest.ini  test_schemas.py  test_schemas_with_models.py  vite.config.ts
.cursor/rules/: api_design_best_practices.mdc  blossomer-gtm-api.mdc  cursor_rules.mdc  python-api-best-practices.mdc
.github/workflows/: alembic-migrate.yml
.notes/: API_REFERENCE.md  ARCHITECTURE.md  AUTH_DB.md  DECISIONS.md  PRD.md  PROMPT_TEMPLATES.md  TASKS.md  UNUSED_IMPORTS_CLEANUP.md  backend_architecture.md  backend_prd.md  design-system.json  frontend_architecture.md  frontend_prd.md
.notes/tech-debt/: 2025-07-05-assessment.md  README.md
.taskmaster/: state.json
.taskmaster/reports/: task-complexity-report.json
.taskmaster/tasks/: task_021.txt  task_022.txt  task_023.txt  task_024.txt  task_025.txt  task_026.txt  task_027.txt  task_028.txt  task_029.txt  task_030.txt  task_031.txt  task_032.txt  task_033.txt  task_034.txt  task_035.txt  task_036.txt  task_037.txt  task_038.txt  task_039.txt  task_040.txt  task_041.txt  task_042.txt  task_043.txt  task_044.txt  task_045.txt  tasks.json
alembic/: env.py
alembic/versions/: 1dfbe24996e0_add_row_level_security_policies.py  24b20636debb_make_email_and_name_required_in_users.py  4049cc78c8f1_increase_key_prefix_length.py  4ce9ace1e6a1_add_business_data_models_company_.py  7fc3f1494203_remove_email_and_name_from_users.py  84e1e3f22ed9_add_business_data_models_company_.py  86ad64011528_initial_tables.py  a73936ff25f9_add_neon_auth_user_id_to_users.py  b1234567890a_add_user_role_column_for_admin_access.py  b7adaca9c685_rename_jsonb_fields_to_data_and_.py  c6c775cde65c_rename_target_accounts_to_accounts_and_.py  c7184de40b5b_rename_analysis_data_to_data_in_.py
data-pipeline-notes/: Bug_tracking.md  Implementation.md  Project_structure.md  Stage2_Migration_Template.md  UI_UX_doc.md
docs/architecture/: content_preprocessing.md  email_preview_architecture.md
docs/endpoints/: icp.md
eval/: email_generation_blossomer.yaml  product_overview.yaml  promptfooconfig.yaml  results.json  target_account.yaml
eval/schemas/: email_generation.schema.json  (+3 more)
frontend/: .env.example  README.md  eslint.config.js  index.html  package-lock.json  package.json  tailwind.config.cjs  tailwind.config.js  vite.config.ts
notes/: API_REFERENCE.md  ARCHITECTURE.md  DECISIONS.md  PRD.md  TASKS.md
scripts/: create_test_user.py
tests/: test_circuit_breaker.py  test_content_preprocessing.py  test_context_orchestrator.py  test_context_orchestrator_service.py  test_dev_file_cache.py  test_health.py  test_imports.py  test_llm_circuit_breaker_integration.py  test_llm_service.py  test_llm_singleton.py  test_main.py  test_positioning.py  test_product_overview_pipeline.py  test_product_overview_service.py  test_target_account_service.py  test_target_accounts.py  test_target_persona_service.py  test_target_personas.py  test_website_scraper.py
(+235 files in other folders)
