[project]
name = "blossomer-gtm-api"
version = "0.1.0"
description = "AI-powered go-to-market campaign generator API for B2B founders"
authors = [
    {name = "Your Name"}
]
readme = "README.md"
requires-python = "^3.11"
dependencies = [
    "fastapi (>=0.115.13,<0.116.0)",
    "uvicorn (>=0.34.3,<0.35.0)",
    "requests (>=2.32.4,<3.0.0)",
    "firecrawl-py (>=2.9.0,<3.0.0)",
    "openai (>=1.91.0,<2.0.0)",
    "google-generativeai (>=0.8.5,<0.9.0)"
]


[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"

[tool.poetry]
name = "blossomer-gtm-api"
version = "0.1.0"
description = "AI-powered go-to-market campaign generator API for B2B founders"
authors = ["Your Name"]

packages = [
    { include = "blossomer_gtm_api", from = "src" }
]

[tool.poetry.group.dev.dependencies]
pre-commit = "^4.2.0"
black = "^25.1.0"
flake8 = "^7.3.0"
pytest = "^8.4.1"
httpx = "^0.28.1"
pytest-mock = "^3.14.1"
pytest-asyncio = "^1.0.0"

[tool.flake8]
max-line-length = 120

