[project]
name = "blossomer_gtm_app"
version = "0.1.0"
description = "AI-powered go-to-market campaign generator API for B2B founders"
authors = [
    {name = "Phillip Ou"}
]
readme = "README.md"
requires-python = "^3.11"

[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"

[tool.poetry]
name = "blossomer_gtm_app"
version = "0.1.0"
description = "AI-powered go-to-market campaign generator API for B2B founders"
authors = ["Phillip Ou"]

packages = [
    { include = "backend" }
]

[tool.poetry.dependencies]
python = "^3.11"
fastapi = ">=0.115.13,<0.116.0"
uvicorn = ">=0.34.3,<0.35.0"
requests = ">=2.32.4,<3.0.0"
firecrawl-py = ">=2.9.0,<3.0.0"
openai = ">=1.91.0,<2.0.0"
google-generativeai = ">=0.8.5,<0.9.0"
jsonschema = ">=4.24.0,<5.0.0"
sqlalchemy = ">=2.0.41,<3.0.0"
asyncpg = ">=0.30.0,<0.31.0"
psycopg2-binary = ">=2.9.10,<3.0.0"
python-dotenv = ">=1.1.1,<2.0.0"
jinja2 = "^3.1.6"
beautifulsoup4 = "^4.13.4"
email-validator = "^2.2.0"
python-jose = {extras = ["cryptography"], version = "^3.5.0"}
redis = ">=4.5.0,<5.0.0"

[tool.poetry.group.dev.dependencies]
pre-commit = "^4.2.0"
black = "^25.1.0"
flake8 = "^7.3.0"
pytest = "^8.4.1"
httpx = "^0.28.1"
pytest-mock = "^3.14.1"
pytest-asyncio = "^1.0.0"
mypy = "^1.16.1"
alembic = "^1.16.2"
python-dotenv = "^1.1.1"

[tool.flake8]
max-line-length = 120

